Make chat amd settings singleton.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,15 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-find_package(QtCreator REQUIRED COMPONENTS Core)
-find_package(Qt6 COMPONENTS Widgets REQUIRED)
+# Configura las rutas de inclusión específicas
+# include_directories(
+#     "/opt/qtcreator-16.0.1/include/qtcreator"
+#     "/opt/qtcreator-16.0.1/include/qtcreator/src"
+#     "/opt/qtcreator-16.0.1/include/qtcreator/src/plugins"
+# )
+
+find_package(QtCreator REQUIRED COMPONENTS Core ProjectExplorer TextEditor)
+find_package(Qt6 COMPONENTS Widgets Network REQUIRED)
 
 # Add a CMake option that enables building your plugin with tests.
 # You don't want your released plugin binaries to contain tests,
@@ -35,24 +42,14 @@ endif()
 
 set(RESOURCE_FILE "${CMAKE_CURRENT_SOURCE_DIR}/resources.qrc")
 
-# # Versión CORREGIDA del qt_add_resources
-# qt_add_resources(DeepSeekPlugin_RESOURCES
-#   PREFIX "/DeepSeekPlugin"
-#   BASE "${CMAKE_CURRENT_SOURCE_DIR}"
-#   FILES
-#     "images/deepseek.png"  # Ruta relativa desde CMakeLists.txt
-#   OUTPUT_TARGETS resource_targets
-# )
-
-# target_sources(DeepSeekPlugin_QtCreator16_0_1_Qt6_8_3 PRIVATE
-#     ${RESOURCE_FILE}
-# )
-
 add_qtc_plugin(DeepSeekPlugin_QtCreator16_0_1_Qt6_8_3
   PLUGIN_DEPENDS
     QtCreator::Core
+    QtCreator::ProjectExplorer
+    QtCreator::TextEditor
   DEPENDS
     Qt::Widgets
+    Qt::Network
     QtCreator::ExtensionSystem
     QtCreator::Utils
   SOURCES
@@ -66,20 +63,24 @@ add_qtc_plugin(DeepSeekPlugin_QtCreator16_0_1_Qt6_8_3
     deepseekoptionspage.ui
     deepseeknavigationchat.cpp
     deepseeknavigationchat.h
+    deepseeksettings.h
+    deepseeksettings.cpp
+    singleton.h
 
 )
+
+# # Agrega las rutas específicas al target
+# target_include_directories(DeepSeekPlugin_QtCreator16_0_1_Qt6_8_3 PRIVATE
+#     "/opt/qtcreator-16.0.1/include/qtcreator"
+#     "/opt/qtcreator-16.0.1/include/qtcreator/src"
+#     "/opt/qtcreator-16.0.1/include/qtcreator/src/plugins"
+# )
+
 
 target_sources(DeepSeekPlugin_QtCreator16_0_1_Qt6_8_3
   PRIVATE
     ${RESOURCE_FILE}
 )
-
-# qt_add_resources(DeepSeekPlugin_QtCreator16_0_1_Qt6_8_3 "resources"
-#   FILES
-#     images/deepseek.png
-# )
-
-
 
 # Enable the Run button in Qt Creator
 get_target_property(QtCreatorCorePath QtCreator::Core LOCATION)
